--- a/app/src/main/res/layout/fragment_applicant_list.xml
+++ b/app/src/main/res/layout/fragment_applicant_list.xml
@@ -72,6 +72,7 @@
             android:contentDescription="No applicants found" />
 
         <TextView
+            android:id="@+id/empty_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -81,6 +82,7 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/empty_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
